[metadata]
name = backports.unittest
version = 0.0.1
license = PSF-2.0
description = "Backport of unittest"
requires-python=">=3.13"
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    =src
packages=find:

[options.packages.find]
where=src
