[metadata]
name = backports.unittest
version = 0.0.1
license = PSF-2.0
description = "Backport of unittest"
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    =src
packages=find:
python_requires = >=3.11

[options.packages.find]
where=src
